--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -7,11 +7,23 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
+  namespace: default
   name: cert-role-cluster
 rules:
-  - apiGroups: [""]
-    resources: [events, pods, deployments]
-    verbs: [create, patch, resume, list, get, watch]
+  # Framework: knowing which other operators are running (i.e. peering).
+  - apiGroups: [ kopf.dev ]
+    resources: [ kopfpeerings ]
+    verbs: [ list, watch, patch, get ]
+
+  # Framework: posting the events about the handlers progress/errors.
+  - apiGroups: [ "" ]
+    resources: [ events ]
+    verbs: [ create ]
+
+  - apiGroups: ["apps"]
+    resources: [deployments]
+    verbs: [create, patch, list, get]
+
   - apiGroups: [kopf.dev]
     resources: [certificategenerationclaims]
     verbs: [ create, patch, resume, list, get, watch ]
