--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -7,7 +7,6 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  namespace: default
   name: cert-role-cluster
 rules:
   # Framework: knowing which other operators are running (i.e. peering).
@@ -20,9 +19,28 @@ rules:
     resources: [ events ]
     verbs: [ create ]
 
-  - apiGroups: ["apps"]
-    resources: [deployments]
-    verbs: [create, patch, list, get]
+  - apiGroups: [""]
+    resources: [secrets]
+    verbs: [create, list, get]
+
+  # Framework: runtime observation of namespaces & CRDs (addition/deletion).
+  - apiGroups: [apiextensions.k8s.io]
+    resources: [customresourcedefinitions]
+    verbs: [list, watch]
+  - apiGroups: [""]
+    resources: [namespaces]
+    verbs: [list, watch]
+
+  - apiGroups:
+      - apps
+    resources:
+      - '*'
+    verbs:
+      - create
+      - patch
+      - list
+      - get
+      - watch
 
   - apiGroups: [kopf.dev]
     resources: [certificategenerationclaims]
