--- a/deploy/rbac.yaml
+++ b/deploy/rbac.yaml
@@ -21,7 +21,7 @@ rules:
 
   - apiGroups: [""]
     resources: [secrets]
-    verbs: [create, list, get]
+    verbs: [create, list, watch, get]
 
   # Framework: runtime observation of namespaces & CRDs (addition/deletion).
   - apiGroups: [apiextensions.k8s.io]
