added hostname for certificate

--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -22,7 +22,9 @@ spec:
           properties:
             spec:
               type: object
-              x-kubernetes-preserve-unknown-fields: true
+              properties:
+                host:
+                  type: string
             status:
               type: object
               x-kubernetes-preserve-unknown-fields: true
